fix: 유니크 제약 추가로 인한 기존 updatePost의 중복 삽입 에러 발생 수정